# TNM061

lab1/: .clang-format  CMakeLists.txt  glstack.cpp
lab1/glew/: CMakeLists.txt
lab1/glfw-3.3.2/: CMakeLists.txt
lab1/shaders/: fragmentshader.glsl  vertexshader.glsl
lab1/util/: MatrixStack.cpp  MatrixStack.hpp  Rotator.cpp  Rotator.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TriangleSoup.cpp  TriangleSoup.hpp  tnm061.cpp  tnm061.hpp
lab2/: lab2.html  lab2.js
lab2/tex/: license.txt
